# breadthseek

./: .cursorignore  .gitignore  .gitmodules  README.md  pyproject.toml
.cursor/: README.md  rules.json
.uv/: settings.toml
bench/azure-storage/: .gitignore  README.md  bench_read_latency.py  bootstrap.sh  pyproject.toml
claude/: link_claude.sh  settings.json
cuda/: CMakeLists.txt  README.md  build.sh  hello.cu
cuda/include/: physics.cuh
cuda/src/: main.cpp  physics.cu
data-scripts/: capture_git_status.py  export_git_history_with_diff.py  foreach_git_history.py  squash_all_commits.py
dev-container/: Dockerfile  devcontainer.json  manage-image.sh  start.sh
dotfiles/: .vimrc  .zshrc
formal-methods/: .gitignore
formal-methods/simple-2pc/: AtomicRename.cfg  AtomicRename.tla  CLAUDE.md  spec-design.md  statement.md
formal-methods/simple-2pc/impl/: Cargo.toml
formal-methods/simple-2pc/impl/src/: coordinator_s.rs  coordinator_v.rs  kv_store_s.rs  kv_store_v.rs  lib.rs  network_s.rs  network_v.rs  system_s.rs  system_v.rs
formal-methods/simple-2pc/impl/tests/: coordinator_tests.rs  kv_store_tests.rs  network_tests.rs  system_tests.rs
formal-methods/verus101/: getting_started.rs
fsd/: .gitignore  CLAUDE.md  README.md  TEST_COVERAGE_SUMMARY.md  __init__.py  pyproject.toml  pytest.ini  run-fsd.sh
fsd/agents/: __init__.py
fsd/cli/: SHELL.md  __init__.py  interactive.py  main.py  shell.py
fsd/cli/commands/: __init__.py  history.py  init.py  logs.py  queue.py  serve.py  status.py  submit.py  task.py
fsd/config/: __init__.py  loader.py  models.py
fsd/core/: __init__.py  ai_task_parser.py  checkpoint.py  checkpoint_manager.py  claude_executor.py  exceptions.py  git_utils.py  output_parser.py  prompt_loader.py  state_machine.py  state_persistence.py  task_resolver.py  task_schema.py  task_sequence.py  task_state.py  task_validator.py
fsd/docs/: activity-tracking.md  architecture.md  claude-executor.md  example-config.yaml  implementation-roadmap.md  interactive_mode.md  orchestration.md  prompt-templates.md  task-schema.yaml
fsd/orchestrator/: __init__.py  phase_executor.py  plan_storage.py  retry_strategy.py
fsd/prompts/: execution.md  planning.md  recovery.md  validation.md
fsd/tasks/: 01-project-setup.md  01-project-setup.yaml  02-task-schema.md  02-task-schema.yaml  03-basic-cli.md  03-basic-cli.yaml  04-config-system.md  04-config-system.yaml  05-activity-tracking.md  05-activity-tracking.yaml  06-state-machine.md  07-checkpoint-system.md  08-phase1-testing.md  09-planning-agent.md  09-prompt-templates.md  10-claude-executor.md  10-execution-agent.md  11-phase-orchestration.md  11-validation-agent.md
fsd/tests/: README.md  __init__.py  conftest.py  test_activity_tracking.py  test_ai_task_parser.py  test_checkpoint.py  test_claude_executor.py  test_claude_executor_mock.py  test_cli.py  test_config.py  test_interactive.py  test_phase_executor.py  test_prompt_loader.py  test_shell.py  test_state_machine.py  test_task_id_generation.py  test_task_resolver.py  test_task_schema.py  test_task_validator.py  test_web_server_execution.py
fsd/tests/fixtures/: README.md  invalid_tasks.yaml  multiple_tasks.yaml  sample_config.yaml  sample_tasks.yaml
fsd/tests/integration/: __init__.py  test_e2e_execution.py  test_full_workflow.py  test_orchestrated_workflow.py  test_task_submission.py
fsd/tests/mocks/: README.md  __init__.py  claude_mocks.py
fsd/tracking/: __init__.py  activity_logger.py  session.py
fsd/web/: README.md  __init__.py  server.py
fsd/web/static/: index.html
fsd/web/static/css/: styles.css
fsd/web/static/js/: app.js
fsd/web/static/templates/: execution-modal.html  task-creation-modal.html  task-detail-modal.html
ghccli/: copy_agent_configs.py  settings.json
ghccli/agents/: test-fixer-prompt.md  test-fixer.yaml
neo4j/: docker-run-neo4j.sh  neo4j_client.py  pyproject.toml
rl-tictactoe/: .gitignore  README.md  pyproject.toml
rl-tictactoe/scripts/: evaluate_baselines.py  train.sh  train_q_agent.py
rl-tictactoe/src/: __init__.py
rl-tictactoe/src/rl_tictactoe/: __init__.py  env.py  evaluate.py  train.py  visualize.py
rl-tictactoe/src/rl_tictactoe/agents/: __init__.py  base.py  heuristic.py  minimax.py  q_learning.py  random.py
rl-tictactoe/tests/: test_agents.py  test_env.py  test_q_learning.py  test_setup.py
setup/: install-uv.sh
vectordb/: .gitignore  README.md  __init__.py  code_embeddings.py  pyproject.toml  repo_processor.py  requirements.txt  vector_store_example.py
vectordb/scripts/: download-models.sh
vectordb/tests/: __init__.py  test_embeddings.py
vectordb/vectordb/: code_embeddings.py  repo_processor.py  vector_store_example.py
