[project]
name = "breadthseek-vectordb"
version = "0.1.0"
description = "Vector Database Example with ChromaDB and Code Embeddings for C++"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "transformers",
    "torch",
    "sentence-transformers",
    "psutil",
    "setuptools",
    "flash-attn",
    "pandas",
    "pyarrow",
    "gitpython",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vectordb"]

[tool.pytest.ini_options]
testpaths = ["vectordb/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v" 