[project]
name = "rl-tictactoe"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "ipykernel",
  "numpy",
  "matplotlib"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "-q"