[project]
name = "azure-storage-bench"
version = "0.1.0"
description = "Benchmark for Azure Blob Storage read latency"
requires-python = ">=3.10"
dependencies = [
    "azure-storage-blob>=12.19.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
bench-read-latency = "bench_read_latency:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
